# environment-client

./: AGENTS.md  Justfile  README.md  main.py  public_register_openapi.yaml  pyproject.toml
.github/workflows/: publish.yml
environment/asset_management/: client.py  models.py
environment/bathing_waters/: client.py
environment/flood_monitoring/: client.py
environment/hydrology/: client.py  models.py
environment/rainfall/: client.py
environment/tide_gauge/: client.py
environment/water_quality_data_archive/: client.py
pypi_smoke/: README.md  requirements.txt  smoke.py  test_smoke.py
tests/: integration_test.py  test_asset_management_client.py  test_bathing_waters_client.py  test_catchment_data_client.py  test_client.py  test_hydrology_client.py  test_public_register_client.py  test_rainfall_client.py  test_tide_gauge_client.py  test_water_quality_data_archive_client.py
tests/cassettes/: test_get_assets.yaml  test_get_bathing_waters.yaml  test_get_flood_areas.yaml  test_get_flood_warnings.yaml  test_get_measure_by_id.yaml  test_get_measures.yaml  test_get_readings.yaml  test_get_station_by_id.yaml  test_get_stations.yaml
tests/cassettes/hydrology/: test_get_measure_by_id.yaml  test_get_measures.yaml  test_get_reading_by_id.yaml  test_get_readings.yaml  test_get_station_by_id.yaml  test_get_stations.yaml
tests/cassettes/integration/: test_integration_get_flood_areas.yaml  test_integration_get_flood_warnings.yaml  test_integration_get_measures.yaml  test_integration_get_readings.yaml  test_integration_get_stations.yaml
(+11 files in other folders)
