[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "environment-client"
version = "0.1.0"
description = "A Python client for the environment.data.gov.uk APIs"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["environment", "uk", "api", "flood", "monitoring"]
authors = [
  { name = "Cogna.co", email = "engineering@cogna.co" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[project.urls]
"Homepage" = "https://github.com/cogna-co/environment"
"Bug Tracker" = "https://github.com/cogna-co/environment/issues"

[tool.hatch.build.targets.sdist]
include = ["/environment"]

[tool.hatch.build.targets.wheel]
packages = ["environment"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "."

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-httpx>=0.35.0",
    "pytest-vcr>=1.0.2",
]
